[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/GameStartMenu.gd" type="Script" id=1]
[ext_resource path="res://art/ui/game_start_menu.png" type="Texture" id=2]
[ext_resource path="res://art/ui/buttons/btn_play1.png" type="Texture" id=3]
[ext_resource path="res://art/ui/buttons/btn_play2.png" type="Texture" id=4]
[ext_resource path="res://art/ui/buttons/btn_settings1.png" type="Texture" id=5]
[ext_resource path="res://art/ui/buttons/btn_settings2.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "slide_in"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 576, 0 ), Vector2( 0, 0 ) ]
}

[node name="GameStartMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="GraphicAndButtons" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 556.0
margin_bottom = 1010.0
custom_constants/separation = 30

[node name="Graphic" type="TextureRect" parent="MarginContainer/GraphicAndButtons"]
margin_right = 536.0
margin_bottom = 500.0
rect_min_size = Vector2( 500, 500 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/GraphicAndButtons"]
margin_top = 530.0
margin_right = 536.0
margin_bottom = 990.0
custom_constants/separation = 5

[node name="PlayButton" type="TextureButton" parent="MarginContainer/GraphicAndButtons/Buttons"]
margin_right = 536.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="LearnButton" type="TextureButton" parent="MarginContainer/GraphicAndButtons/Buttons"]
margin_top = 155.0
margin_right = 536.0
margin_bottom = 305.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="SettingsButton" type="TextureButton" parent="MarginContainer/GraphicAndButtons/Buttons"]
margin_top = 310.0
margin_right = 536.0
margin_bottom = 460.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/slide_in = SubResource( 1 )

